# xdg-desktop-portal-kde

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  cppcheck-suppressions.xml  xdg-desktop-portal-kde-cppcheck.xml
autotests/: CMakeLists.txt  colorschemetest.py  dbussignaltest.cpp  xdgshortcuttest.cpp
cmake/modules/: FindEpoxy.cmake  FindGBM.cmake  FindPipeWire.cmake  FindSPA.cmake
data/: CMakeLists.txt  kde-no-pipewire.portal  kde-portals.conf  kde.portal  org.freedesktop.impl.portal.PermissionStore.xml  org.freedesktop.impl.portal.desktop.kde.cmake.in  org.freedesktop.impl.portal.desktop.kde.desktop.in  plasma-xdg-desktop-portal-kde.service.in
po/ar/: xdg-desktop-portal-kde.po
po/ast/: xdg-desktop-portal-kde.po
po/az/: xdg-desktop-portal-kde.po
po/bg/: xdg-desktop-portal-kde.po
po/ca/: xdg-desktop-portal-kde.po
po/ca@valencia/: xdg-desktop-portal-kde.po
po/cs/: xdg-desktop-portal-kde.po
po/da/: xdg-desktop-portal-kde.po
po/de/: xdg-desktop-portal-kde.po
po/el/: xdg-desktop-portal-kde.po
po/en_GB/: xdg-desktop-portal-kde.po
po/eo/: xdg-desktop-portal-kde.po
po/es/: xdg-desktop-portal-kde.po
po/et/: xdg-desktop-portal-kde.po
po/eu/: xdg-desktop-portal-kde.po
po/fi/: xdg-desktop-portal-kde.po
po/fr/: xdg-desktop-portal-kde.po
po/ga/: xdg-desktop-portal-kde.po
po/gl/: xdg-desktop-portal-kde.po
po/he/: xdg-desktop-portal-kde.po
po/hi/: xdg-desktop-portal-kde.po
po/hu/: xdg-desktop-portal-kde.po
po/ia/: xdg-desktop-portal-kde.po
po/id/: xdg-desktop-portal-kde.po
po/is/: xdg-desktop-portal-kde.po
po/it/: xdg-desktop-portal-kde.po
po/ja/: xdg-desktop-portal-kde.po
po/ka/: xdg-desktop-portal-kde.po
po/ko/: xdg-desktop-portal-kde.po
po/lt/: xdg-desktop-portal-kde.po
po/lv/: xdg-desktop-portal-kde.po
po/ml/: xdg-desktop-portal-kde.po
po/nb/: xdg-desktop-portal-kde.po
po/nl/: xdg-desktop-portal-kde.po
po/nn/: xdg-desktop-portal-kde.po
po/pa/: xdg-desktop-portal-kde.po
po/pl/: xdg-desktop-portal-kde.po
po/pt/: xdg-desktop-portal-kde.po
po/pt_BR/: xdg-desktop-portal-kde.po
po/ro/: xdg-desktop-portal-kde.po
po/ru/: xdg-desktop-portal-kde.po
po/sa/: xdg-desktop-portal-kde.po
po/sk/: xdg-desktop-portal-kde.po
po/sl/: xdg-desktop-portal-kde.po
po/sr/: xdg-desktop-portal-kde.po
po/sr@ijekavian/: xdg-desktop-portal-kde.po
po/sr@ijekavianlatin/: xdg-desktop-portal-kde.po
po/sr@latin/: xdg-desktop-portal-kde.po
po/sv/: xdg-desktop-portal-kde.po
po/ta/: xdg-desktop-portal-kde.po
po/tr/: xdg-desktop-portal-kde.po
po/ug/: xdg-desktop-portal-kde.po
po/uk/: xdg-desktop-portal-kde.po
po/zh_CN/: xdg-desktop-portal-kde.po
po/zh_TW/: xdg-desktop-portal-kde.po
src/: AccessDialog.qml  AppChooserDialog.qml  CMakeLists.txt  Dialog.qml  DynamicLauncherDialog.qml  GlobalShortcutsDialog.qml  InputCaptureDialog.qml  MobileDialog.qml  PipeWireCard.qml  PipeWireCardWindow.qml  PipeWireDelegate.qml  PipeWireDelegateWindow.qml  PipeWireLayout.qml  PortalDialog.qml  RemoteDesktopDialog.qml  ScreenChooserDialog.qml  ScreenChooserDialogTemplate.qml  ScreenshotDialog.qml  UsbDialog.qml  UserInfoDialog.qml  WallpaperDialog.qml  access.cpp  access.h  accessdialog.cpp  accessdialog.h  account.cpp  account.h  appchooser.cpp  appchooser.h  appchooserdialog.cpp  appchooserdialog.h  appchooserdialog.ui  appchooserdialogitem.cpp  appchooserdialogitem.h  background.cpp  background.h  clipboard.cpp  clipboard.h  dbusdisconnectlistener.cpp  dbusdisconnectlistener.h  (+85 more)
src/dbus/: generate-interfaces-adaptors.sh
src/kirigami-filepicker/: CMakeLists.txt
src/kirigami-filepicker/api/: mobilefiledialog.cpp  mobilefiledialog.h
src/kirigami-filepicker/declarative/: CreateDirectorySheet.qml  FilePicker.qml  FilePickerWindow.qml  PlacesGlobalDrawer.qml  dirlister.cpp  dirlister.h  dirmodel.cpp  dirmodel.h  dirmodelutils.cpp  dirmodelutils.h  filechooserqmlcallback.cpp  filechooserqmlcallback.h  fileplacesmodel.cpp  fileplacesmodel.h
src/qml/: AppChooserDialog.qml  UserInfoDialog.qml
src/region-select/: FloatingBackground.qml  FloatingTextBox.qml  RegionSelectOverlay.qml  SelectionEditor.cpp  SelectionEditor.h
src/wayland/: waylandintegration.cpp  waylandintegration.h  waylandintegration_p.h  xdgimporter.cpp  xdgimporter.h
